--- a/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
@@ -89,7 +89,7 @@
                                             <div class="row d-block justify-content-center align-items-center gap" style="padding:0% 3% 3% 3%; max-height: 300px;">
                                                 
                                                 <div>
-                                                    {% if preschooler.gender == 'Male' %}
+                                                {% if preschooler.gender == 'Male' %}
                                                     {% if preschooler.ps_image %}
                                                         <img class="rounded-circle hoverableImage" src="/Media/{{ preschooler.ps_image }}" style="min-width: 85px; max-width: 200px;">
                                                     {% else %}
@@ -201,7 +201,19 @@
                                                         <div class="row d-flex ">
                                                             <div class="d-flex justify-content-center align-items-center text-center flex-column">
                                                                 <h5 class="fw-bold text-success">Current Image</h5>
-                                                                <img class="rounded-circle hoverableImage2" src="/Media/{{ preschooler.ps_image }}" style="min-width: 85px; max-width: 200px;">
+                                                                {% if preschooler.gender == 'Male' %}
+                                                                    {% if preschooler.ps_image %}
+                                                                        <img class="rounded-circle hoverableImage2" src="/Media/{{ preschooler.ps_image }}" style="min-width: 85px; max-width: 200px;">
+                                                                    {% else %}
+                                                                        <img class="rounded-circle hoverableImage2"src="{% static '/Media/kidBoy.jpg' %}" style="min-width: 85px; max-width: 200px;">
+                                                                    {% endif %}
+                                                                {% elif preschooler.gender == 'Female' %}
+                                                                    {% if preschooler.ps_image %}
+                                                                        <img class="rounded-circle hoverableImage2" src="/Media/{{ preschooler.ps_image }}" style="min-width: 85px; max-width: 200px;">
+                                                                    {% else %}
+                                                                        <img class="rounded-circle hoverableImage2"src="{% static '/Media/kidGirl.jpg' %}" style="min-width: 85px; max-width: 200px;">
+                                                                    {% endif %}
+                                                                {% endif %}
                                                                 <div class="text-center">
                                                                     <input type="checkbox" name="ps_image-clear" id="ps_image-clear_id">
                                                                     <label class="mt-2 " for="ps_image-clear_id">Set to Default Image</label>
